--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "babel-core": "^6.23.1",
     "babel-loader": "^6.3.2",
     "babel-preset-es2015": "^6.22.0",
+    "babel-preset-es2016": "^6.24.1",
     "babel-preset-react": "^6.23.0",
+    "babel-preset-stage-2": "^6.24.1",
     "cors": "^2.8.3",
     "css-loader": "^0.26.2",
     "express": "^4.15.2",
@@ -25,6 +27,7 @@
     "node-sass": "^4.5.0",
     "postcss-loader": "^1.3.3",
     "react-hot-loader": "^3.0.0-beta",
+    "redux-devtools": "^3.4.0",
     "sass-loader": "^6.0.2",
     "style-loader": "^0.13.2",
     "webpack": "^2.2.1",
@@ -36,6 +39,9 @@
     "phoenix": "file:deps/phoenix",
     "phoenix_html": "file:deps/phoenix_html",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "react-redux": "^5.0.4",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0"
   }
 }
