--- a/package.json
+++ b/package.json
@@ -36,12 +36,14 @@
     "webpack-hot-middleware": "^2.18.0"
   },
   "dependencies": {
+    "es6-promise": "^4.1.0",
     "phoenix": "file:deps/phoenix",
     "phoenix_html": "file:deps/phoenix_html",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.4",
     "redux": "^3.6.0",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "whatwg-fetch": "^2.0.3"
   }
 }
