--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
   },
   "dependencies": {
     "es6-promise": "^4.1.0",
+    "exports-loader": "^0.6.4",
+    "imports-loader": "^0.7.1",
     "phoenix": "file:deps/phoenix",
     "phoenix_html": "file:deps/phoenix_html",
     "react": "^15.4.2",
