--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "phoenix": "file:deps/phoenix",
     "phoenix_html": "file:deps/phoenix_html",
     "react": "^15.4.2",
+    "react-contenteditable": "^2.0.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.4",
     "redux": "^3.6.0",
