--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.4",
     "redux": "^3.6.0",
+    "redux-orm": "^0.9.0",
     "redux-thunk": "^2.2.0",
     "whatwg-fetch": "^2.0.3"
   }
