--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "webpack-hot-middleware": "^2.18.0"
   },
   "dependencies": {
+    "classnames": "^2.2.5",
     "es6-promise": "^4.1.0",
     "exports-loader": "^0.6.4",
     "imports-loader": "^0.7.1",
