--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "es6-promise": "^4.1.0",
     "exports-loader": "^0.6.4",
     "imports-loader": "^0.7.1",
+    "linkify-it": "^2.0.3",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
     "phoenix": "file:deps/phoenix",
@@ -48,9 +49,11 @@
     "react-contenteditable": "^2.0.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.4",
+    "react-string-replace": "^0.4.0",
     "redux": "^3.6.0",
     "redux-orm": "^0.9.0",
     "redux-thunk": "^2.2.0",
+    "tlds": "^1.185.0",
     "whatwg-fetch": "^2.0.3"
   }
 }
